dist_man1_MANS=

if BUILD_CROWND
  dist_man1_MANS+=crownd.1
endif

if ENABLE_QT
  dist_man1_MANS+=crown-qt.1
endif

if BUILD_CROWN_CLI
  dist_man1_MANS+=crown-cli.1
endif

if BUILD_CROWN_TX
  dist_man1_MANS+=crown-tx.1
endif

if ENABLE_WALLET
if BUILD_CROWN_WALLET
  dist_man1_MANS+=crown-wallet.1
endif
endif
